--- a/development/sass/posts-listing/posts-listing.sass
+++ b/development/sass/posts-listing/posts-listing.sass
@@ -15,8 +15,10 @@
 		padding: 0px 17px
 		transition: 0.1s background-color
 
-		&:hover
+		&:hover, &:active
 			background-color: #f4f3f2
+		&:active
+			transition: 0s background-color
 
 		&:first-of-type
 			border-top-left-radius: 3px
